trying to work out why the form won't open

--- a/tjanster/entreprenad/förbesiktning/index.html
+++ b/tjanster/entreprenad/förbesiktning/index.html
@@ -238,37 +238,40 @@
 	</section>
 	<section class="slide white form-section">
 		<div class="container-lg">
-			<div class="formBackground form-column float-left">
-					<h3 class="pad-header margin-0 text-blueGrey center">
-						Redo att boka?
-						<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
-					</h3>
-					<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" style="width: 100%; height: 400px;">
-					</div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-			</div>
-			<div class="secondary-column">
-				<div class="customers">
-					<p class="copy-1 float-left">Du är i gott sällskap.</p>
-					<p class="copy-2 float-left">Gör som många andra och samarbeta med Besiktningsman.se</p>
-					<ul class="customer-logos">
-						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
-						</li>
-						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
-						</li>
-						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
-						</li>
-						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
-						</li>
-						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
-						</li>
-					</ul>
+			<div class="wrap">
+				<div class="formBackground form-column">
+						<h3 class="pad-header margin-0 text-blueGrey center">
+							Redo att boka?
+							<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+						</h3>
+						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" style="width: 100%; height: 400px;">
+						</div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+				</div>
+				<div class="secondary-column">
+					<div class="customers">
+						<p class="copy-1 float-left">Du är i gott sällskap.</p>
+						<p class="copy-2 float-left">Gör som många andra och samarbeta med Besiktningsman.se</p>
+						<ul class="customer-logos">
+							<li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+							</li>
+							<li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
+							</li>
+							<li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
+							</li>
+							<li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
+							</li>
+							<li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
+
 		</div>
 	</section>
 <section class="ctas">
@@ -276,7 +279,7 @@
     <div class="cta general-queries">
       <div class="copy-column">
         <h4 class="cta-headline">Generella frågor</h4>
-        <p class="cta-copy">Gå till vår <a href="../../../kontakt/" class="common-Link">kontaktsida</a> och lämna till ett meddelande.</p>
+        <p class="cta-copy">Gå till vår <a href="../../../kontakt/" class="common-Link">kontaktsida</a> och lämna ett meddelande.</p>
       </div>
     </div>
     <div class="cta support">
