--- a/tjanster/entreprenad/förbesiktning/index.html
+++ b/tjanster/entreprenad/förbesiktning/index.html
@@ -164,14 +164,14 @@
 				<br>
 				<li>
 					<div class="popupTrigger" data-popup-id="docs">
-						<p class="bold">Dokument</p>
+						<p>Dokument</p>
 					</div>
 				</li>
 				<br>
 				<br>
 				<li>
 					<a href="tel:0101654000">
-						<p class="bold">Telefon: 010-165 40 00</p>
+						<p class="bold small">Telefon: 010-165 40 00</p>
 					</a>
 				</li>
 			</ul>
@@ -238,19 +238,17 @@
 	</section>
 	<section class="slide white form-section">
 		<div class="container-lg">
-			<div class="wrap">
 				<div class="formBackground form-column">
 						<h3 class="pad-header margin-0 text-blueGrey center">
 							Redo att boka?
 							<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 						</h3>
-						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" style="width: 100%; height: 400px;">
-						</div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 				</div>
 				<div class="secondary-column">
 					<div class="customers">
-						<p class="copy-1 float-left">Du är i gott sällskap.</p>
-						<p class="copy-2 float-left">Gör som många andra och samarbeta med Besiktningsman.se</p>
+						<p class="copy-1">Du är i gott sällskap.</p>
+						<p class="copy-2">Gör som många andra och samarbeta med Besiktningsman.se</p>
 						<ul class="customer-logos">
 							<li class="customer-logo">
 								<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
@@ -270,7 +268,6 @@
 						</ul>
 					</div>
 				</div>
-			</div>
 
 		</div>
 	</section>
