Renamed folder with O instead of Ö

--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -276,7 +276,11 @@
     <div class="cta general-queries">
       <div class="copy-column">
         <h4 class="cta-headline">Generella frågor</h4>
-        <p class="cta-copy">Gå till vår <a href="../../../kontakt/" class="common-Link">kontaktsida</a> och lämna ett meddelande.</p>
+        <p class="cta-copy">
+					Gå till vår
+					<a href="../../../kontakt/" class="common-Link">kontaktsida</a>
+					 och lämna ett meddelande.
+				</p>
       </div>
     </div>
     <div class="cta support">
@@ -290,6 +294,20 @@
       </div>
     </div>
   </div>
+</section>
+<section class="slide whiteSlide" id="newsletter-slide" style="background-color: #fbfbfb;">
+	<div class="padding-5 center">
+		<h3>Söker du en annan besiktningstyp?</h3>
+			<a href="../../entreprenad/" class="common-Link text-blue">
+				<p>Till entreprenadlistan</p>
+			</a>
+			<a href="../../entreprenad/" class="common-Link text-blue">
+				<p>Till Slutbesiktning</p>
+			</a>
+			<a href="../../entreprenad/" class="common-Link text-blue">
+				<p>Till Ny slutbesiktning</p>
+			</a>
+	</div>
 </section>
 	<!-- Footer -->
 	<section class="slide customFooter autoHeight">
