--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -295,18 +295,20 @@
     </div>
   </div>
 </section>
-<section class="slide whiteSlide" id="newsletter-slide" style="background-color: #fbfbfb;">
-	<div class="padding-5 center">
-		<h3>Söker du en annan besiktningstyp?</h3>
-			<a href="../../entreprenad/" class="common-Link text-blue">
-				<p>Till entreprenadlistan</p>
-			</a>
-			<a href="../../entreprenad/" class="common-Link text-blue">
-				<p>Till Slutbesiktning</p>
-			</a>
-			<a href="../../entreprenad/" class="common-Link text-blue">
-				<p>Till Ny slutbesiktning</p>
-			</a>
+<section class="slide whiteSlide" id="services-nav">
+	<div class="container-lg padding-5 center">
+		<h3 class="center">Söker ni en annan besiktningstyp?</h3>
+		<div class="center-m-down">
+				<a href="../../entreprenad/" class="common-Button text-blue">
+					Till Entreprenadlistan
+				</a>
+				<a href="../../entreprenad/" class="common-Button text-blue">
+					Till Slutbesiktning
+				</a>
+				<a href="../../entreprenad/" class="common-Button text-blue">
+					Till Ny slutbesiktning
+				</a>
+		</div>
 	</div>
 </section>
 	<!-- Footer -->
