Made the #footer-nav an id to use for all footer navs instead of custom to services

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 	</section>
 
 	<!-- BIG CTAS-->
-	<section class="slide whiteSlide" id="newsletter-slide" style="background-color: #fbfbfb;">
+	<section class="slide whiteSlide" id="footer-nav">
 		<div class="padding-5 center">
 				<a href="https://medium.com/besiktningsbloggen" class="common-Link globalFooterCard soft-shadow white">
 					<img src="assets/img/nyheter/bmblogg.png" alt="besiktningsman.se bloggen - Vi utvecklar och förnyar" />
