--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -295,7 +295,7 @@
     </div>
   </div>
 </section>
-<section class="slide whiteSlide" id="services-nav">
+<section class="slide whiteSlide" id="footer-nav">
 	<div class="container-lg padding-5 center">
 		<h3 class="center">Söker ni en annan besiktningstyp?</h3>
 		<div class="center-m-down">
