--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -351,7 +351,7 @@
 		</div>
 		<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="http://sebastianselling.com/" target="_blank">Design av Sebastian Selling</a></p>
 	</section>
-<!-- POPUP WITH LINKS TO NEWSLETTER TEXTS -->
+<!-- POPUP WITH LINKS TO DOCUMENTS -->
  <div class="popup hidden" data-popup-id="docs" id="docs">
 	 <div class="close closeButton left opaque white text-blue">X</div>
 	 <div class="content">
