Updated the book cover design and text styles for docs

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -162,7 +162,7 @@
 				<br>
 				<li>
 					<div class="popupTrigger" data-popup-id="docs">
-						<p class="bold">Dokument</p>
+						<p>Dokument</p>
 					</div>
 				</li>
 				<br>
@@ -200,15 +200,15 @@
 				<div class="wrap">
 
 					<div class="fix-10-10 left">
-						<h2>Utbildningsmaterial</h2>
-						<p>
-							Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till.
-							<br>
-							Nedan kan du läsa på om allt från lagar och regler till hur en Särskild besiktning genomförs.
-							<br>
-							På detta vis kan du undvika extra kostnader men även förstå vad som pågår när du renoverar eller bygger till.
+						<h2 class="common-IntroText">Utbildningsmaterial</h2>
+						<p style="max-width: 700px;font-weight: 400;
+font-size: 17px;
+line-height: 28px;
+color: #525f7f;">
+							Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att
+							du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till.
 						</p>
-						<h3>Besiktningar för bostadsrättsföreningar</h3>
+						<p class="cta-headline bold">Besiktningar för bostadsrättsföreningar</p>
 						<ul class="grid grid-74 later equal left margin-top-5">
 
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
@@ -276,7 +276,7 @@ skall detta vara befullmäktigat att föra talan.
 							</li>
 						</ul>
 						<br>
-						<h3>Formulär & böcker</h3>
+						<p class="cta-headline bold">Formulär & böcker</p>
 						<ul class="grid grid-74 later equal left margin-top-5">
 
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
@@ -332,7 +332,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 							</li>
 						</ul>
 						<br>
-						<h3>Regler och Toleranser</h3>
+						<p class="cta-headline bold">Regler och Toleranser</p>
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
@@ -435,7 +435,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 
 						</ul>
 						<br>
-						<h3>Försäkringsbolag</h3>
+						<p class="cta-headline bold">Försäkringsbolag</p>
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-10 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
@@ -478,7 +478,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 	            </li>
 						</ul>
 						<br>
-						<h3>Intresseorganisationer</h3>
+						<p class="cta-headline bold">Intresseorganisationer</p>
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
@@ -705,7 +705,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 	              </a>
 	            </li>
 						</ul>
-						<h3>Myndigheter</h3>
+						<p class="cta-headline bold">Myndigheter</p>
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
@@ -758,7 +758,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 	              </a>
 	            </li>
 						</ul>
-						<h3>Advokatbyråer</h3>
+						<p class="cta-headline bold">Advokatbyråer</p>
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
