--- a/404/index.html
+++ b/404/index.html
@@ -190,7 +190,7 @@
 				<br>
 				<li>
 					<div class="popupTrigger" data-popup-id="docs">
-						<p class="bold">Dokument</p>
+						<p>Dokument</p>
 					</div>
 				</li>
 				<br>
