updated the mobile menu

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -164,7 +164,7 @@
 				<br>
 				<li>
 					<div class="popupTrigger" data-popup-id="docs">
-						<p class="bold">Dokument</p>
+						<p>Dokument</p>
 					</div>
 				</li>
 				<br>
