--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -248,14 +248,14 @@
 				<div class="secondary-column">
 					<div class="customers">
 						<p class="copy-1">Du är i gott sällskap.</p>
-						<p class="copy-2">Gör som många andra och samarbeta med Besiktningsman.se</p>
+						<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
 						<ul class="customer-logos">
 							<li class="customer-logo">
 								<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
 							</li>
-							<li class="customer-logo">
+							<!-- <li class="customer-logo">
 								<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
-							</li>
+							</li> -->
 							<li class="customer-logo">
 								<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
 							</li>
