--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				<br>
 				<li>
 					<div class="popupTrigger" data-popup-id="docs">
-						<p class="bold">Dokument</p>
+						<p>Dokument</p>
 					</div>
 				</li>
 				<br>
