--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -136,7 +136,7 @@
 				<li><a href="../nyheter/"><p>Publicerat & Press</p></a></li>
 				<br>
 				<br>
-				<li><div class="popupTrigger" data-popup-id="docs"><p class="bold">Dokument</p></div></li>
+				<li><div class="popupTrigger" data-popup-id="docs"><p>Dokument</p></div></li>
 				<br>
 				<br>
 				<li>
