working on the main landing page photo slider

--- a/index.html
+++ b/index.html
@@ -266,48 +266,48 @@
 								</a>
 							</li>
 							<div class="col-6-12 left fromRight">
+								<p class="center text-blueGrey small" style="margin-top: 100px;">Här entreprenadbesiktar vi just nu</p>
 								<!-- Projects: Slider Autoplay -->
 								<div class="fix-7-12 noSelect">
 									<div class="sliderBox-83">
-										<p class="center margin-0 text-blueGrey small">Här entreprenadbesiktar vi just nu</p>
-										<ul class="slider clickable autoplay fromAbove Quote" data-slider-interval="5000" data-slider-stoponclick="false" data-slider-id="83">
+										<ul class="slider clickable autoplay fromAbove Quote common-Card" data-slider-interval="5000" data-slider-stoponclick="false" data-slider-id="83">
 											<li class="selected">
 												<h3>IKANO</h3>
 												<p>BRF Skogsstjärnan</p>
-												<div class="img-fade img-border-radius wide"></div>
-												<img src="assets/img/projects/brf_skogsstjernan.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF Skogsstjärnan" />
+												<div class="img-fade"></div>
+												<img src="assets/img/projects/brf_skogsstjernan.jpg" alt="Projektfoto av BRF Skogsstjärnan" />
 											</li>
 											<li>
 												<h3>SKANSKA</h3>
 												<p>BRF The View</p>
-												<div class="img-fade img-border-radius wide"></div>
-												<img src="assets/img/projects/brf_theview.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF The View" />
+												<div class="img-fade"></div>
+												<img src="assets/img/projects/brf_theview.jpg" alt="Projektfoto av BRF The View" />
 											</li>
 											<li>
 												<h3>EINAR MATSSON</h3>
 												<p>BRF Haganova</p>
-												<div class="img-fade img-border-radius wide"></div>
-												<img src="assets/img/projects/brf_haganova.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF Haganova" />
+												<div class="img-fade"></div>
+												<img src="assets/img/projects/brf_haganova.jpg" alt="Projektfoto av BRF Haganova" />
 											</li>
 											<li>
 												<h3>BYGGVESTA</h3>
 												<p>BRF Terrassen</p>
-												<div class="img-fade img-border-radius wide"></div>
-												<img src="assets/img/projects/brf_terrassen.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF Terrassen" />
+												<div class="img-fade"></div>
+												<img src="assets/img/projects/brf_terrassen.jpg" alt="Projektfoto av BRF Terrassen" />
 											</li>
 										</ul>
-										<ul class="controller center dots fromBottom margin-bottom-2" data-slider-id="83">
+										<ul class="controller center dots fromBottom" data-slider-id="83">
 											<li class="dot selected"></li>
 											<li class="dot"></li>
 											<li class="dot"></li>
 											<li class="dot"></li>
 										</ul>
-										<div class="center-m-down">
-											<a class="fromCenter popupTrigger" data-popup-id="ispect-projects">
-												<p class="micro bold text-blue">Några av våra senaste besiktningsuppdrag</p>
-											</a>
-										</div>
 									</div>
+								</div>
+								<div class="center-m-down">
+									<a class="fromCenter popupTrigger" data-popup-id="ispect-projects">
+										<p class="micro bold text-blue">Några av våra senaste besiktningsuppdrag</p>
+									</a>
 								</div>
 							</div>
 						</ul>
