--- a/dokument/index.html
+++ b/dokument/index.html
@@ -201,10 +201,7 @@
 
 					<div class="fix-10-10 left">
 						<h2 class="common-IntroText">Utbildningsmaterial</h2>
-						<p style="max-width: 700px;font-weight: 400;
-font-size: 17px;
-line-height: 28px;
-color: #525f7f;">
+						<p style="max-width: 700px;">
 							Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att
 							du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till.
 						</p>
