Added a body title class for consistency, removed a bunch of font styles as well

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom" style="border-bottom: none;">
-						<p class="hero" style="font-weight: 400;">Sveriges ledande entreprenadbesiktningsföretag</p>
+						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
 						<a href="#entreprenad" class="common-Button white text-blue fromCenter">ENTREPRENAD</a><a href="#brf" class="common-Button white text-blue fromCenter" id="landingButton2">BRF / PRIVAT</a>
 						<br>
 						<br>
@@ -225,7 +225,7 @@
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft cell-32">
 								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
-								<h2 class="small">Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h2>
+								<h2 class="common-BodyTitle">Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h2>
 								<a href="helhetskoncept/">
 									<ul>
 										<li>
@@ -262,7 +262,7 @@
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue bold micro">Ni kan även ringa oss på: 010-165 40 00</p>
+									<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<div class="col-6-12 left fromRight">
@@ -306,7 +306,7 @@
 								</div>
 								<div class="center-m-down">
 									<a class="fromCenter popupTrigger" data-popup-id="ispect-projects">
-										<p class="micro bold text-blue">Några av våra senaste besiktningsuppdrag</p>
+										<p class="common-Link">Några av våra senaste besiktningsuppdrag</p>
 									</a>
 								</div>
 							</div>
@@ -345,7 +345,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h2>Entreprenadbesiktning för nyproduktion och ROT</h2>
+								<h2 class="common-IntroText">Entreprenadbesiktning för nyproduktion och ROT</h2>
 								<p>
 									Besiktningsman.se erbjuder ett komplett rikstäckande utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
 								</p>
@@ -358,7 +358,6 @@
 								<a href="tjanster/entreprenad/">
 									<p class="common-Link">Gå till tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
 								</a>
-								<br>
 								<!-- typeform button -->
 								<p class="micro margin-0">Frågor? Lämna ett meddelande så hjälper vi dig!</p>
 								<br>
@@ -370,7 +369,7 @@
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue micro">Ni kan även ringa oss på: 010-165 40 00</p>
+									<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
@@ -393,14 +392,13 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h2>Besiktningstjänster för bostadsrättsföreningar</h2>
+								<h2 class="common-IntroText">Besiktningstjänster för bostadsrättsföreningar</h2>
 								<p>
 									Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-Kontrollansvarig, för bostadrättsfastigheter.
 								</p>
 								<a href="tjanster/brf/">
 									<p class="common-Link">Gå till tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
 								</a>
-								<br>
 								<!-- typeform button -->
 								<p class="micro margin-0">Frågor? Lämna ett meddelande så hjälper vi dig!</p>
 								<br>
@@ -412,7 +410,7 @@
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue micro">Ni kan även ringa oss på: 010-165 40 00</p>
+									<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
@@ -436,13 +434,12 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h2>Besiktningstjänster för privatpersoner</h2>
-								<h3>Småhus, lägenheter, fritidshus</h3>
+								<h2 class="common-IntroText">Besiktningstjänster för privatpersoner</h2>
+								<h3 class="common-BodyTitle">Småhus, lägenheter, fritidshus</h3>
 								<p>Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
 								<a href="tjanster/privat/">
 									<p class="common-Link">Gå till tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
 								</a>
-								<br>
 								<!-- typeform button -->
 								<p class="micro margin-0">Frågor? Lämna ett meddelande så hjälper vi dig!</p>
 								<br>
@@ -454,7 +451,7 @@
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue micro">Ni kan även ringa oss på: 010-165 40 00</p>
+									<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
