landing page got some text restyling

--- a/index.html
+++ b/index.html
@@ -224,46 +224,45 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft cell-32">
-								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
+								<h1 class="common-IntroText">Entreprenadbesiktning som ökar lönsamheten.</h1>
 								<h2 class="common-BodyTitle">Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h2>
-								<a href="helhetskoncept/">
-									<ul>
-										<li>
-											<p class="small">Det ger er:</p>
-										</li>
-										<li>
-											<div class="checkmark"></div>
-											<p class="small">Sänkta kostnader i produktion och eftermarknad.</p>
-										</li>
-										<li>
-											<div class="checkmark"></div>
-											<p class="small" style="margin-left: 23px;">Möjlighet till färdigt projekt med noll byggfel <br>på avtalad dag.</p>
-										</li>
-										<li>
-											<div class="checkmark"></div>
-											<p class="small">Lättillgänglig dokumentation i vår portal.</p>
-										</li>
-										<li>
-											<div class="checkmark"></div>
-											<p class="small">Tillgång till byggfelsstatistik.</p>
-										</li>
-									</ul>
-									<p class="margin-bottom-2 common-Link">
-											Mer om digitaliserad entreprenadbesiktning
-											<i class="icono-arrow2-left"></i>
-									</p>
-								</a>
-								<!-- typeform button -->
-								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
-									kontakta oss
-								</a>
-								<!-- typeform JS -->
-								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-								<br>
-								<br>
-								<a href="tel:0101654000">
-									<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-								</a>
+								<ul>
+									<li>
+										<p>Det ger er:</p>
+									</li>
+									<li>
+										<div class="checkmark"></div>
+										<p>Sänkta kostnader i produktion och eftermarknad.</p>
+									</li>
+									<li>
+										<div class="checkmark"></div>
+										<p style="margin-left: 23px;">Möjlighet till färdigt projekt med noll byggfel <br>på avtalad dag.</p>
+									</li>
+									<li>
+										<div class="checkmark"></div>
+										<p>Lättillgänglig dokumentation i vår portal.</p>
+									</li>
+									<li>
+										<div class="checkmark"></div>
+										<p>Tillgång till byggfelsstatistik.</p>
+									</li>
+								</ul>
+								<div class="section-Links">
+										<a href="helhetskoncept/" class="common-BodyText">
+											<p class="margin-bottom-2 common-Link">
+													Mer om digitaliserad entreprenadbesiktning <i class="icono-arrow2-left"></i>
+											</p>
+										</a>
+										<!-- typeform button -->
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+											kontakta oss
+										</a>
+										<!-- typeform JS -->
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
+								</div>
 							</li>
 							<div class="col-6-12 left fromRight">
 								<p class="center text-blueGrey small" style="margin-top: 100px;">Här entreprenadbesiktar vi just nu</p>
@@ -346,31 +345,30 @@
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
 								<h2 class="common-IntroText">Entreprenadbesiktning för nyproduktion och ROT</h2>
-								<p>
+								<p class="common-BodyText">
 									Besiktningsman.se erbjuder ett komplett rikstäckande utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
 								</p>
-								<p>
+								<p class="common-BodyText">
 									Vi erbjuder också ett samlat helhetskoncept med besiktningsappen iSpect, för ökad lönsamhet och leveranssäkerhet i byggprojekt.
 								</p>
-								<p>
+								<p class="common-BodyText">
 									Det ger bland annat möjlighet till dokumentation i vår besiktningsportal vid slutbesiktning.
 								</p>
-								<a href="tjanster/entreprenad/">
-									<p class="common-Link">Gå till tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
-								</a>
-								<!-- typeform button -->
-								<p class="micro margin-0">Frågor? Lämna ett meddelande så hjälper vi dig!</p>
-								<br>
-								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
-									Lämna ett meddelande
-								</a>
-								<!-- typeform JS -->
-								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-								<br>
-								<br>
-								<a href="tel:0101654000">
-									<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-								</a>
+								<div class="section-Links">
+										<a href="tjanster/entreprenad/">
+											<p class="common-Link">Gå till tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
+										</a>
+										<!-- typeform button -->
+										<p>Frågor? Lämna ett meddelande så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<!-- typeform JS -->
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
+								</div>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" height="700" width="1000" src="assets/img/backgrounds/tunnel.jpg" alt="Foto av besiktningsman vid inspektion av tunnelbanesystem." />
@@ -393,25 +391,24 @@
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
 								<h2 class="common-IntroText">Besiktningstjänster för bostadsrättsföreningar</h2>
-								<p>
+								<p class="common-BodyText">
 									Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-Kontrollansvarig, för bostadrättsfastigheter.
 								</p>
-								<a href="tjanster/brf/">
-									<p class="common-Link">Gå till tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
-								</a>
-								<!-- typeform button -->
-								<p class="micro margin-0">Frågor? Lämna ett meddelande så hjälper vi dig!</p>
-								<br>
-								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
-									Lämna ett meddelande
-								</a>
-								<!-- typeform JS -->
-								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-								<br>
-								<br>
-								<a href="tel:0101654000">
-									<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-								</a>
+								<div class="section-Links">
+										<a href="tjanster/brf/">
+											<p class="common-Link">Gå till tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
+										</a>
+										<!-- typeform button -->
+										<p>Frågor? Lämna ett meddelande så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<!-- typeform JS -->
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
+								</div>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/summer/summer_apartments.jpg" alt="Foto av en BRFs fasad" />
@@ -426,7 +423,7 @@
 	</section>
 
 	<!-- PRIVATE -->
-	<section class="slide whiteSlide kenBurns fromLeft autoHeight" name="privat" data-name="privat" data-title="privat" id="privat">
+	<section class="slide whiteSlide fromLeft autoHeight" name="privat" data-name="privat" data-title="privat" id="privat">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -436,23 +433,22 @@
 							<li class="col-6-12 left cell-32">
 								<h2 class="common-IntroText">Besiktningstjänster för privatpersoner</h2>
 								<h3 class="common-BodyTitle">Småhus, lägenheter, fritidshus</h3>
-								<p>Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
-								<a href="tjanster/privat/">
-									<p class="common-Link">Gå till tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
-								</a>
-								<!-- typeform button -->
-								<p class="micro margin-0">Frågor? Lämna ett meddelande så hjälper vi dig!</p>
-								<br>
-								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
-									Lämna ett meddelande
-								</a>
-								<!-- typeform JS -->
-								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-								<br>
-								<br>
-								<a href="tel:0101654000">
-									<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-								</a>
+								<p class="common-BodyText">Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
+								<div class="section-Links">
+									<a href="tjanster/privat/">
+										<p class="common-Link">Gå till tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
+									</a>
+									<!-- typeform button -->
+									<p>Frågor? Lämna ett meddelande så hjälper vi dig!</p>
+									<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+										Lämna ett meddelande
+									</a>
+									<!-- typeform JS -->
+									<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+									<a href="tel:0101654000">
+										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+									</a>
+								</div>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/summer/summer_house.jpg" alt="Traditionellt sommarhus i svenska skärgården" />
@@ -473,15 +469,16 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h2>Vår digitala besiktningsprocess</h2>
-								<h3>För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
-								<p>Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
-								<a class="popupTrigger" data-popup-id="ispect-details">
-									<p class="margin-bottom-1 common-Link">Mer om digitaliserad entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
-								</a>
-								<br>
-								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
-								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+								<h2 class="common-IntroText">Vår digitala besiktningsprocess</h2>
+								<h3 class="common-BodyTitle">För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
+								<p class="common-BodyText">Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
+								<div class="section-Links">
+									<a href="/helhetskoncept">
+										<p class="common-Link">Mer om digitaliserad entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
+									</a>
+									<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
+									<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+								</div>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/ispect/bm_ispect_closeup.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
