--- a/helhetskoncept/index.html
+++ b/helhetskoncept/index.html
@@ -226,12 +226,16 @@
 			<div class="container">
 				<div class="wrap">
 
-					<div class="fix-10-12 left">
-						<h2 class="margin-bottom-2">För ökad lönsamhet och leveranssäkerhet i byggprojekt</h2>
+					<div class="fix-10-12 left" style="max-width: 750px;">
+						<div class="bread-crumbs">
+					    <a href="../#ispect">ispect<i class="icono-arrow2-left"></i></a>
+					    <span class="bread-crumbs-title xs-hide">Digitaliserad entreprenadbesiktning</span>
+					  </div>
+						<h2 class="common-IntroText">För ökad lönsamhet och leveranssäkerhet i byggprojekt</h2>
 						<ul>
 							<li>
-								<h3>Vårt helhetskoncept innebär:</h3>
-								<p class="small">
+								<h3 class="common-BodyTitle">Vårt helhetskoncept innebär:</h3>
+								<p class="common-BodyText">
 									• Fortlöpande besiktning från byggstart till fullt färdigt projekt
 									<br> • Utökad byggherrekontroll enligt ett unikt upplägg
 									<br> • HBM-Huvudbesiktningsman och KA är en och samma person vilket ger byggherren en djupare kontroll av produktionen
@@ -240,15 +244,15 @@
 								</p>
 							</li>
 							<li>
-								<h3>Skillnader</h3>
-								<p class="small">
+								<h3 class="common-BodyTitle">Skillnader</h3>
+								<p class="common-BodyText">
 									Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
 									<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
 								</p>
 							</li>
 							<li>
-								<h3>Fördelar</h3>
-								<p class="small">
+								<h3 class="common-BodyTitle">Fördelar</h3>
+								<p class="common-BodyText">
 									• Inga dolda fel
 									<br> • Felbilagor alltid med ansvar per entreprenör
 									<br> • Genererade felbilagor till portalen direkt vid färdig besiktning
@@ -264,8 +268,8 @@
 								</p>
 							</li>
 							<li>
-								<h3>Effekter</h3>
-								<p class="small">
+								<h3 class="common-BodyTitle">Effekter</h3>
+								<p class="common-BodyText">
 									• Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostnader för felavhjälpning, från byggstart fram till att den 10-åriga ansvarstiden passerats.
 									<br> • Ökad leveranssäkerhet
 									<br> • Ökad kundnöjdhet
@@ -274,8 +278,8 @@
 								</p>
 							</li>
 							<li>
-								<h3>iSpect - utvecklat av besiktningsmän för besiktningsmän</h3>
-								<p class="small">
+								<h3 class="common-BodyTitle">iSpect - utvecklat av besiktningsmän för besiktningsmän</h3>
+								<p class="common-BodyText">
 									I vårt helhetskoncept för digitaliserad entreprenadbesiktning använder vi vår besiktningsapp iSpect.
 									<br> Med iSpect effektiviseras besiktningen oberoende av vem besiktningspersonen är, och utlåtandet utformas med ett nominellt språk. All pappershantering med utlåtanden, bilagor etc elimineras.
 									<br> Vår lösning med iSpect omfattar hela besiktningsprocessen.
@@ -296,19 +300,19 @@
 					<div class="fix-10-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h2>Med iSpect</h2>
-								<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
-								<!-- typeform button -->
-								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
-									kontakta oss
-								</a>
-								<!-- typeform JS -->
-								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-								<br>
-								<br>
-								<a href="tel:0101654000">
-									<p class="text-blue bold micro">Ni kan även ringa oss på: 010-165 40 00</p>
-								</a>
+								<h2 class="common-IntroText">Med iSpect</h2>
+								<p class="common-BodyText">Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
+								<div class="section-Links">
+										<!-- typeform button -->
+										<a class="typeform-share common-Button blue margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+											kontakta oss
+										</a>
+										<!-- typeform JS -->
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="text-blue bold micro">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
+								</div>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="../assets/img/ispect/bm_ispect_closeup.jpg" alt="Foto av besiktningsman med appen iSpect" />
